# CvVidProc

./: .gitignore  API.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
CMake/Modules/: CheckAtomic.cmake  SetDefaultBuildType.cmake
Config/: project_config.h.in  project_dir_config.h.in
PySources/: .gitignore
PySources/PyLibs/: test1.py
PySources/cvvidproc/: .gitignore  __init__.py
Sources/: assign_bubbles_algo.h  async_token_process.h  async_token_queue.h  async_token_set_queue.h  background_processor.h  bgprocessor_triframemedian.cpp  bgprocessor_triframemedian.h  cv_util.cpp  cv_util.h  cv_vid_background.h  cv_vid_background_consumer.h  cv_vid_bg_helpers.cpp  cv_vid_bg_helpers.h  cv_vid_bubbletrack_helpers.cpp  cv_vid_bubbletrack_helpers.h  cv_vid_fragment_consumer.h  cv_vid_frames_consumer.h  cv_vid_frames_generator.h  cv_vid_objecttrack_helpers.cpp  cv_vid_objecttrack_helpers.h  cv_vid_py_bindings.cpp  highlight_bubbles_algo.cpp  highlight_bubbles_algo.h  histogram_median_algo.h  main.cpp  main.h  mat_set_intermediary.h  ndarray_converter.cpp  py_bindings.cpp  rand_tests.cpp  rand_tests.h  token_processing_unit.h  token_processor.h  triframe_median_algo.cpp  triframe_median_algo.h
Sources/AsyncTokens/: async_token_batch_generator.h  async_token_process.h  async_token_queue.h  token_batch_consumer.h  token_batch_generator.h  token_generator_algo.h  token_process_intermediary.h  token_processing_unit.h  token_processor.h  token_processor_algo.h  token_processor_algo_base.h  token_queue.h  ts_interval_timer.h
Sources/ProcessorAlgos/: assign_bubbles_algo.h  assign_objects_algo.h  highlight_bubbles_algo.cpp  highlight_bubbles_algo.h  highlight_objects_algo.cpp  highlight_objects_algo.h  histogram_median_algo.h  triframe_median_algo.cpp  triframe_median_algo.h
Sources/ProcessorTokenHandlers/: cv_vid_fragment_consumer.h  cv_vid_frames_generator.h  cv_vid_frames_generator_algo.h  mat_set_intermediary.h  py_dict_consumer.h
Sources/Utility/: cv_util.cpp  cv_util.h  exception_assert.cpp  exception_assert.h  ndarray_converter.cpp  ndarray_converter.h  string_utils.cpp  string_utils.h
